syntax = "proto3";

package email_proto;


service MailService {
    rpc sendWelcomeEmail(UserInfo) returns (UserInfoResponse);
    rpc sendReservationEmail(ReservationInfo) returns (ReservationInfoResponse);
  }
  
  message ReservationInfo {
    string name = 1;
    string email = 2;
    string title = 3;
    string address = 4;
    string checkIn = 5;
    string checkOut = 6;
  }
  message UserInfo {
    string name = 1;
    string email = 2;
  }
  
  message UserInfoResponse {
    bool  error = 1;
    string message = 2;
    UserInfo user = 3;
}

message ReservationInfoResponse {
  bool  error = 1;
  string message = 2;
  ReservationInfo reservationInfo = 3;
}
